--- a/web/styles_frontend.css
+++ b/web/styles_frontend.css
@@ -126,6 +126,7 @@ strong {font-weight: 700;}
     line-height: 1.2;
     text-align: left;
     vertical-align: top;
+	font-size: 14px;
 }
 
 table > tbody > tr > td {
